--- a/Lab5.ipynb
+++ b/Lab5.ipynb
@@ -57,18 +57,13 @@
         "    return False\n",
         "\n",
         "def day_of_year(day, month, year):\n",
-        "  sum=0\n",
+        "  sumn=0\n",
         "  if leap_year(year):\n",
         "    days_in_month[1] = 29\n",
         "  else:\n",
         "    days_in_month[1]= 28\n",
-        "  for i in range(month):\n",
-        "    for j in range(len(days_in_month)):\n",
-        "      if i == j and day == 1 and month == 1:\n",
-        "        sum = day\n",
-        "      elif i == j and day ==1 and month>1:\n",
-        "        sum +=  days_in_month[j]\n",
-        "  return(sum)\n",
+        "  sumn = sum(days_in_month[:month-1])+day\n",
+        "  return sumn\n",
         "\n",
         "# Testcases\n",
         "print(\"Normal year (2023):\")\n",
@@ -101,12 +96,12 @@
       ],
       "metadata": {
         "id": "oerlrWw46aJZ",
-        "outputId": "b6cff89e-c88a-4a65-fb55-e34e6b22e637",
+        "outputId": "4f850914-f010-4567-c966-a42d2f6f86a1",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 36,
+      "execution_count": 41,
       "outputs": [
         {
           "output_type": "stream",
@@ -114,31 +109,31 @@
           "text": [
             "Normal year (2023):\n",
             "1 Jan 2023: 1\n",
-            "1 Feb 2023: 59\n",
-            "1 Mar 2023: 90\n",
-            "31 Dec 2023: 0\n",
+            "1 Feb 2023: 32\n",
+            "1 Mar 2023: 60\n",
+            "31 Dec 2023: 365\n",
             "\n",
             "Leap year (2024):\n",
             "1 Jan 2024: 1\n",
-            "29 Feb 2024: 0\n",
-            "1 Mar 2024: 91\n",
-            "31 Dec 2024: 0\n",
+            "29 Feb 2024: 60\n",
+            "1 Mar 2024: 61\n",
+            "31 Dec 2024: 366\n",
             "\n",
             "Century year, not a leap year (1900):\n",
-            "1 Mar 1900: 90\n",
+            "1 Mar 1900: 60\n",
             "\n",
             "Century year, leap year (2000):\n",
-            "1 Mar 2000: 91\n",
+            "1 Mar 2000: 61\n",
             "\n",
             "Mid-year dates:\n",
-            "15 Jun 2023: 0\n",
-            "15 Jun 2024: 0\n",
+            "15 Jun 2023: 166\n",
+            "15 Jun 2024: 167\n",
             "\n",
             "Last day of each quarter:\n",
-            "31 Mar 2023: 0\n",
-            "30 Jun 2023: 0\n",
-            "30 Sep 2023: 0\n",
-            "31 Dec 2023: 0\n"
+            "31 Mar 2023: 90\n",
+            "30 Jun 2023: 181\n",
+            "30 Sep 2023: 273\n",
+            "31 Dec 2023: 365\n"
           ]
         }
       ]
@@ -299,13 +294,60 @@
       "cell_type": "code",
       "source": [
         "def find_mismatch(str1, str2):\n",
-        "  pass"
+        "  str1 = str1.lower()\n",
+        "  str2 = str2.lower()\n",
+        "  count=0\n",
+        "  for i in range(len(str1)):\n",
+        "    if str1[i] != str2[i]:\n",
+        "      count+=1\n",
+        "      if count >= 2:\n",
+        "        return 2\n",
+        "      elif count == 1:\n",
+        "        return 1\n",
+        "  return 0\n",
+        "print(find_mismatch(\"Python\",\"Java\"))\n",
+        "print(find_mismatch(\"book\",\"boot\"))\n",
+        "print(find_mismatch(\"fan\",\"fun\"))\n",
+        "print(find_mismatch(\"sin\",\"sink\"))\n",
+        "print(find_mismatch(\"Dog\", \"dog\"))\n",
+        "print(find_mismatch(\"poke\", \"spoke\"))\n",
+        "print(find_mismatch(\"poker\", \"poke\"))"
       ],
       "metadata": {
-        "id": "jyVxAb-MXnz2"
+        "id": "jyVxAb-MXnz2",
+        "outputId": "54457ab1-bceb-4f0c-a330-820533e1f6fc",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 401
+        }
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 20,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "1\n",
+            "1\n",
+            "1\n",
+            "0\n",
+            "0\n",
+            "1\n"
+          ]
+        },
+        {
+          "output_type": "error",
+          "ename": "IndexError",
+          "evalue": "string index out of range",
+          "traceback": [
+            "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+            "\u001b[0;31mIndexError\u001b[0m                                Traceback (most recent call last)",
+            "\u001b[0;32m<ipython-input-20-be1454ed9889>\u001b[0m in \u001b[0;36m<cell line: 19>\u001b[0;34m()\u001b[0m\n\u001b[1;32m     17\u001b[0m \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mfind_mismatch\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m\"Dog\"\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m\"dog\"\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     18\u001b[0m \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mfind_mismatch\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m\"poke\"\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m\"spoke\"\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 19\u001b[0;31m \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mfind_mismatch\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m\"poker\"\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m\"poke\"\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+            "\u001b[0;32m<ipython-input-20-be1454ed9889>\u001b[0m in \u001b[0;36mfind_mismatch\u001b[0;34m(str1, str2)\u001b[0m\n\u001b[1;32m      4\u001b[0m   \u001b[0mcount\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;36m0\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      5\u001b[0m   \u001b[0;32mfor\u001b[0m \u001b[0mi\u001b[0m \u001b[0;32min\u001b[0m \u001b[0mrange\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mlen\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mstr1\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 6\u001b[0;31m     \u001b[0;32mif\u001b[0m \u001b[0mstr1\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mi\u001b[0m\u001b[0;34m]\u001b[0m \u001b[0;34m!=\u001b[0m \u001b[0mstr2\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mi\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      7\u001b[0m       \u001b[0mcount\u001b[0m\u001b[0;34m+=\u001b[0m\u001b[0;36m1\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      8\u001b[0m       \u001b[0;32mif\u001b[0m \u001b[0mcount\u001b[0m \u001b[0;34m>=\u001b[0m \u001b[0;36m2\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+            "\u001b[0;31mIndexError\u001b[0m: string index out of range"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "markdown",
