--- a/Lab5.ipynb
+++ b/Lab5.ipynb
@@ -96,12 +96,12 @@
       ],
       "metadata": {
         "id": "oerlrWw46aJZ",
-        "outputId": "4f850914-f010-4567-c966-a42d2f6f86a1",
+        "outputId": "f2c143f5-2f25-428f-e096-15ac7c477fd8",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 41,
+      "execution_count": 1,
       "outputs": [
         {
           "output_type": "stream",
@@ -155,17 +155,34 @@
       "cell_type": "code",
       "source": [
         "def is_leap(year):\n",
-        "    pass\n",
+        "  if year%4 == 0 and year%100 != 0 or year%400 == 0:\n",
+        "    return True\n",
+        "  else :\n",
+        "    return False\n",
         "\n",
         "def day_of_year(day, month, year):\n",
-        "    pass\n",
+        "  if is_leap(year):\n",
+        "    days_in_month[1] = 29\n",
+        "  else:\n",
+        "    days_in_month[1]= 28\n",
+        "  sumn = sum(days_in_month[:month-1])+day\n",
+        "  return sumn\n",
+        "\n",
         "\n",
         "def day_in_year(year):\n",
         "    return 366 if is_leap(year) else 365\n",
         "\n",
         "def date_diff(date1, date2):\n",
-        "    pass\n",
-        "\n",
+        "  a = date1.split(\"-\")\n",
+        "  b = date2.split(\"-\")\n",
+        "  year = 0\n",
+        "  year = int(a[2])\n",
+        "  year =  int(b[2])\n",
+        "  print(year)\n",
+        "  if day_in_year(year):\n",
+        "    num=0\n",
+        "    num += int(day_in_year )\n",
+        "    return num\n",
         "# ทดสอบฟังก์ชัน\n",
         "print(date_diff(\"1-1-2018\", \"1-1-2020\"))  # ควรได้ 731\n",
         "print(date_diff(\"25-12-1999\", \"9-3-2000\"))  # ควรได้ 76\n",
@@ -175,10 +192,35 @@
         "print(date_diff(\"1-1-2023\", \"31-12-2023\"))  # ควรได้ 365 (ทั้งปี 2023)\n"
       ],
       "metadata": {
-        "id": "dwNIkw0wDRjF"
+        "id": "dwNIkw0wDRjF",
+        "outputId": "0a55f480-73ae-49f6-fb86-71d76149407c",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 349
+        }
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 43,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "2020\n"
+          ]
+        },
+        {
+          "output_type": "error",
+          "ename": "TypeError",
+          "evalue": "int() argument must be a string, a bytes-like object or a real number, not 'function'",
+          "traceback": [
+            "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+            "\u001b[0;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
+            "\u001b[0;32m<ipython-input-43-0310e77f33c8>\u001b[0m in \u001b[0;36m<cell line: 31>\u001b[0;34m()\u001b[0m\n\u001b[1;32m     29\u001b[0m     \u001b[0;32mreturn\u001b[0m \u001b[0mnum\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     30\u001b[0m \u001b[0;31m# ทดสอบฟังก์ชัน\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 31\u001b[0;31m \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mdate_diff\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m\"1-1-2018\"\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m\"1-1-2020\"\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m  \u001b[0;31m# ควรได้ 731\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     32\u001b[0m \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mdate_diff\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m\"25-12-1999\"\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m\"9-3-2000\"\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m  \u001b[0;31m# ควรได้ 76\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     33\u001b[0m \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mdate_diff\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m\"1-1-2000\"\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m\"1-1-2001\"\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m  \u001b[0;31m# ควรได้ 367 (ปี 2000 เป็น leap year)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+            "\u001b[0;32m<ipython-input-43-0310e77f33c8>\u001b[0m in \u001b[0;36mdate_diff\u001b[0;34m(date1, date2)\u001b[0m\n\u001b[1;32m     26\u001b[0m   \u001b[0;32mif\u001b[0m \u001b[0mday_in_year\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0myear\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     27\u001b[0m     \u001b[0mnum\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;36m0\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 28\u001b[0;31m     \u001b[0mnum\u001b[0m \u001b[0;34m+=\u001b[0m \u001b[0mint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mday_in_year\u001b[0m \u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     29\u001b[0m     \u001b[0;32mreturn\u001b[0m \u001b[0mnum\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     30\u001b[0m \u001b[0;31m# ทดสอบฟังก์ชัน\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+            "\u001b[0;31mTypeError\u001b[0m: int() argument must be a string, a bytes-like object or a real number, not 'function'"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "markdown",
@@ -321,7 +363,7 @@
           "height": 401
         }
       },
-      "execution_count": 20,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
