--- a/Lab5.ipynb
+++ b/Lab5.ipynb
@@ -96,12 +96,12 @@
       ],
       "metadata": {
         "id": "oerlrWw46aJZ",
-        "outputId": "f2c143f5-2f25-428f-e096-15ac7c477fd8",
+        "outputId": "1d6ed321-8121-4d44-e30e-6f86a048923c",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 1,
+      "execution_count": 12,
       "outputs": [
         {
           "output_type": "stream",
@@ -160,29 +160,34 @@
         "  else :\n",
         "    return False\n",
         "\n",
-        "def day_of_year(day, month, year):\n",
-        "  if is_leap(year):\n",
-        "    days_in_month[1] = 29\n",
-        "  else:\n",
-        "    days_in_month[1]= 28\n",
-        "  sumn = sum(days_in_month[:month-1])+day\n",
-        "  return sumn\n",
-        "\n",
+        "def day_of_month(month, year):\n",
+        "  if month in [1,3,5,7,8,10,12]:\n",
+        "    return 31\n",
+        "  elif month in [4,6,9,11]:\n",
+        "    return 30\n",
+        "  elif month == 2:\n",
+        "    if is_leap(year):\n",
+        "      return 29\n",
+        "    else:\n",
+        "      return 28\n",
         "\n",
         "def day_in_year(year):\n",
         "    return 366 if is_leap(year) else 365\n",
         "\n",
         "def date_diff(date1, date2):\n",
-        "  a = date1.split(\"-\")\n",
-        "  b = date2.split(\"-\")\n",
-        "  year = 0\n",
-        "  year = int(a[2])\n",
-        "  year =  int(b[2])\n",
-        "  print(year)\n",
-        "  if day_in_year(year):\n",
-        "    num=0\n",
-        "    num += int(day_in_year )\n",
-        "    return num\n",
+        "  d1,m1,y1 = date1.split(\"-\")\n",
+        "  d2,m2,y2 = date2.split(\"-\")\n",
+        "  day1 = int(d1)\n",
+        "  for month in range(1,int(m1)):\n",
+        "    day1 += day_of_month(month,int(y1))\n",
+        "  day2 = int(d2)\n",
+        "  for month in range(1,int(m2)):\n",
+        "    day2 += day_of_month(month,int(y2))\n",
+        "\n",
+        "  day_on_year = 0\n",
+        "  for year in range(int(y1),int(y2)):\n",
+        "    day_on_year += day_in_year(year)\n",
+        "  return day_on_year - day1 + day2 +1\n",
         "# ทดสอบฟังก์ชัน\n",
         "print(date_diff(\"1-1-2018\", \"1-1-2020\"))  # ควรได้ 731\n",
         "print(date_diff(\"25-12-1999\", \"9-3-2000\"))  # ควรได้ 76\n",
@@ -193,31 +198,23 @@
       ],
       "metadata": {
         "id": "dwNIkw0wDRjF",
-        "outputId": "0a55f480-73ae-49f6-fb86-71d76149407c",
+        "outputId": "33658dae-e491-4159-8122-f3f803fe3625",
         "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 349
+          "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 43,
+      "execution_count": 11,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "2020\n"
-          ]
-        },
-        {
-          "output_type": "error",
-          "ename": "TypeError",
-          "evalue": "int() argument must be a string, a bytes-like object or a real number, not 'function'",
-          "traceback": [
-            "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-            "\u001b[0;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
-            "\u001b[0;32m<ipython-input-43-0310e77f33c8>\u001b[0m in \u001b[0;36m<cell line: 31>\u001b[0;34m()\u001b[0m\n\u001b[1;32m     29\u001b[0m     \u001b[0;32mreturn\u001b[0m \u001b[0mnum\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     30\u001b[0m \u001b[0;31m# ทดสอบฟังก์ชัน\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 31\u001b[0;31m \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mdate_diff\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m\"1-1-2018\"\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m\"1-1-2020\"\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m  \u001b[0;31m# ควรได้ 731\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     32\u001b[0m \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mdate_diff\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m\"25-12-1999\"\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m\"9-3-2000\"\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m  \u001b[0;31m# ควรได้ 76\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     33\u001b[0m \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mdate_diff\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m\"1-1-2000\"\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m\"1-1-2001\"\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m  \u001b[0;31m# ควรได้ 367 (ปี 2000 เป็น leap year)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-            "\u001b[0;32m<ipython-input-43-0310e77f33c8>\u001b[0m in \u001b[0;36mdate_diff\u001b[0;34m(date1, date2)\u001b[0m\n\u001b[1;32m     26\u001b[0m   \u001b[0;32mif\u001b[0m \u001b[0mday_in_year\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0myear\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     27\u001b[0m     \u001b[0mnum\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;36m0\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 28\u001b[0;31m     \u001b[0mnum\u001b[0m \u001b[0;34m+=\u001b[0m \u001b[0mint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mday_in_year\u001b[0m \u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     29\u001b[0m     \u001b[0;32mreturn\u001b[0m \u001b[0mnum\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     30\u001b[0m \u001b[0;31m# ทดสอบฟังก์ชัน\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-            "\u001b[0;31mTypeError\u001b[0m: int() argument must be a string, a bytes-like object or a real number, not 'function'"
+            "731\n",
+            "76\n",
+            "367\n",
+            "366\n",
+            "366\n",
+            "365\n"
           ]
         }
       ]
@@ -239,16 +236,52 @@
       "cell_type": "code",
       "source": [
         "def is_leap(year):\n",
-        "    pass\n",
+        "  if year%4 == 0 and year%100 != 0 or year%400 == 0:\n",
+        "    return True\n",
+        "  else :\n",
+        "    return False\n",
         "\n",
-        "def day_of_year(day, month, year):\n",
-        "    pass\n",
+        "def day_of_month(month, year):\n",
+        "  if month in [1,3,5,7,8,10,12]:\n",
+        "    return 31\n",
+        "  elif month in [4,6,9,11]:\n",
+        "    return 30\n",
+        "  elif month == 2:\n",
+        "    if is_leap(year):\n",
+        "      return 29\n",
+        "    else:\n",
+        "      return 28\n",
+        "\n",
+        "def is_check_monorday(day,month,year):\n",
+        "    if month < 1 or month > 12:\n",
+        "      return False\n",
+        "    if day < 1 or day > day_of_month(month,year):\n",
+        "      return False\n",
+        "    return True\n",
         "\n",
         "def day_in_year(year):\n",
         "    return 366 if is_leap(year) else 365\n",
         "\n",
         "def date_diff(date1, date2):\n",
-        "    pass\n",
+        "  try:\n",
+        "      d1,m1,y1 = date1.split(\"-\")\n",
+        "      d2,m2,y2 = date2.split(\"-\")\n",
+        "  except ValueError:\n",
+        "    return -1\n",
+        "  if not (is_check_monorday(int(d1),int(m1),int(y1)) and is_check_monorday(int(d2),int(m2),int(y2))):\n",
+        "    return -1\n",
+        "\n",
+        "  day1 = int(d1)\n",
+        "  for month in range(1,int(m1)):\n",
+        "    day1 += day_of_month(month,int(y1))\n",
+        "  day2 = int(d2)\n",
+        "  for month in range(1,int(m2)):\n",
+        "    day2 += day_of_month(month,int(y2))\n",
+        "\n",
+        "  day_on_year = 0\n",
+        "  for year in range(int(y1),int(y2)):\n",
+        "    day_on_year += day_in_year(year)\n",
+        "  return day_on_year - day1 + day2 +1\n",
         "\n",
         "# ทดสอบฟังก์ชัน\n",
         "print(date_diff(\"1-1-2018\", \"1-1-2020\"))  # ควรได้ 731\n",
@@ -265,10 +298,31 @@
         "print(date_diff(\"abc\", \"1-1-2024\"))  # ควรได้ -1 (รูปแบบวันที่ไม่ถูกต้อง)"
       ],
       "metadata": {
-        "id": "OgqrXbFVWEML"
+        "id": "OgqrXbFVWEML",
+        "outputId": "108a6676-1f9a-49c4-b437-42cd50049b77",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 29,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "731\n",
+            "76\n",
+            "367\n",
+            "366\n",
+            "366\n",
+            "365\n",
+            "-1\n",
+            "-1\n",
+            "-1\n",
+            "-1\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "markdown",
