--- a/Lab5.ipynb
+++ b/Lab5.ipynb
@@ -96,12 +96,12 @@
       ],
       "metadata": {
         "id": "oerlrWw46aJZ",
-        "outputId": "1d6ed321-8121-4d44-e30e-6f86a048923c",
+        "outputId": "ed9de330-d0b1-47b1-fedd-722004e535f9",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 12,
+      "execution_count": 1,
       "outputs": [
         {
           "output_type": "stream",
@@ -198,12 +198,12 @@
       ],
       "metadata": {
         "id": "dwNIkw0wDRjF",
-        "outputId": "33658dae-e491-4159-8122-f3f803fe3625",
+        "outputId": "3e903adb-d314-4af6-aad6-220ca152b030",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 11,
+      "execution_count": 3,
       "outputs": [
         {
           "output_type": "stream",
@@ -299,12 +299,12 @@
       ],
       "metadata": {
         "id": "OgqrXbFVWEML",
-        "outputId": "108a6676-1f9a-49c4-b437-42cd50049b77",
+        "outputId": "6e50f0b0-0f7d-47be-dca9-8aec33e0030d",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 29,
+      "execution_count": 4,
       "outputs": [
         {
           "output_type": "stream",
@@ -393,12 +393,14 @@
         "  str1 = str1.lower()\n",
         "  str2 = str2.lower()\n",
         "  count=0\n",
-        "  for i in range(len(str1)):\n",
+        "  min_len = min(len(str1),len(str2))\n",
+        "\n",
+        "  for i in range(min_len):\n",
         "    if str1[i] != str2[i]:\n",
         "      count+=1\n",
         "      if count >= 2:\n",
         "        return 2\n",
-        "      elif count == 1:\n",
+        "      elif count < 2:\n",
         "        return 1\n",
         "  return 0\n",
         "print(find_mismatch(\"Python\",\"Java\"))\n",
@@ -411,13 +413,12 @@
       ],
       "metadata": {
         "id": "jyVxAb-MXnz2",
-        "outputId": "54457ab1-bceb-4f0c-a330-820533e1f6fc",
+        "outputId": "969fe838-615c-439f-b7be-4a84fca05930",
         "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 401
+          "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": null,
+      "execution_count": 10,
       "outputs": [
         {
           "output_type": "stream",
@@ -428,19 +429,8 @@
             "1\n",
             "0\n",
             "0\n",
-            "1\n"
-          ]
-        },
-        {
-          "output_type": "error",
-          "ename": "IndexError",
-          "evalue": "string index out of range",
-          "traceback": [
-            "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-            "\u001b[0;31mIndexError\u001b[0m                                Traceback (most recent call last)",
-            "\u001b[0;32m<ipython-input-20-be1454ed9889>\u001b[0m in \u001b[0;36m<cell line: 19>\u001b[0;34m()\u001b[0m\n\u001b[1;32m     17\u001b[0m \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mfind_mismatch\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m\"Dog\"\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m\"dog\"\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     18\u001b[0m \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mfind_mismatch\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m\"poke\"\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m\"spoke\"\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 19\u001b[0;31m \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mfind_mismatch\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m\"poker\"\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m\"poke\"\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
-            "\u001b[0;32m<ipython-input-20-be1454ed9889>\u001b[0m in \u001b[0;36mfind_mismatch\u001b[0;34m(str1, str2)\u001b[0m\n\u001b[1;32m      4\u001b[0m   \u001b[0mcount\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;36m0\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      5\u001b[0m   \u001b[0;32mfor\u001b[0m \u001b[0mi\u001b[0m \u001b[0;32min\u001b[0m \u001b[0mrange\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mlen\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mstr1\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 6\u001b[0;31m     \u001b[0;32mif\u001b[0m \u001b[0mstr1\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mi\u001b[0m\u001b[0;34m]\u001b[0m \u001b[0;34m!=\u001b[0m \u001b[0mstr2\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mi\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      7\u001b[0m       \u001b[0mcount\u001b[0m\u001b[0;34m+=\u001b[0m\u001b[0;36m1\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      8\u001b[0m       \u001b[0;32mif\u001b[0m \u001b[0mcount\u001b[0m \u001b[0;34m>=\u001b[0m \u001b[0;36m2\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-            "\u001b[0;31mIndexError\u001b[0m: string index out of range"
+            "1\n",
+            "0\n"
           ]
         }
       ]
