สร้างโดยใช้ Colab

--- a/Lab5.ipynb
+++ b/Lab5.ipynb
@@ -96,12 +96,12 @@
       ],
       "metadata": {
         "id": "oerlrWw46aJZ",
-        "outputId": "ed9de330-d0b1-47b1-fedd-722004e535f9",
+        "outputId": "c9a5f73e-5eac-4675-8a44-615c6f7b9d3d",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 1,
+      "execution_count": 4,
       "outputs": [
         {
           "output_type": "stream",
@@ -198,7 +198,7 @@
       ],
       "metadata": {
         "id": "dwNIkw0wDRjF",
-        "outputId": "3e903adb-d314-4af6-aad6-220ca152b030",
+        "outputId": "470ec81b-1e91-47e0-b220-571715893b04",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
@@ -299,12 +299,12 @@
       ],
       "metadata": {
         "id": "OgqrXbFVWEML",
-        "outputId": "6e50f0b0-0f7d-47be-dca9-8aec33e0030d",
+        "outputId": "1ffe9eb5-db95-4d64-9e9c-fcb1b483f51f",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 4,
+      "execution_count": 2,
       "outputs": [
         {
           "output_type": "stream",
@@ -392,17 +392,29 @@
         "def find_mismatch(str1, str2):\n",
         "  str1 = str1.lower()\n",
         "  str2 = str2.lower()\n",
-        "  count=0\n",
-        "  min_len = min(len(str1),len(str2))\n",
         "\n",
-        "  for i in range(min_len):\n",
-        "    if str1[i] != str2[i]:\n",
-        "      count+=1\n",
-        "      if count >= 2:\n",
-        "        return 2\n",
-        "      elif count < 2:\n",
-        "        return 1\n",
-        "  return 0\n",
+        "  if str1 == str2 :\n",
+        "    return 0\n",
+        "  if abs(len(str1)-len(str2)) > 1:\n",
+        "    return 2\n",
+        "\n",
+        "  if len(str2) == len(str1)+1:\n",
+        "    for i in range(len(str2)):\n",
+        "      if str2[:i]+str2[i+1:] == str1:\n",
+        "        return  1\n",
+        "  elif len(str1) == len(str2)+1:\n",
+        "    for i in range(len(str1)):\n",
+        "      if str1[:i]+str1[i+1:] == str2:\n",
+        "        return  1\n",
+        "\n",
+        "  if len(str1)==len(str2):\n",
+        "    count = 0\n",
+        "    for i in range(len(str1)):\n",
+        "      if str1[i] != str2[i]:\n",
+        "        count+=1\n",
+        "        if count > 1:\n",
+        "          return 2\n",
+        "    return 1\n",
         "print(find_mismatch(\"Python\",\"Java\"))\n",
         "print(find_mismatch(\"book\",\"boot\"))\n",
         "print(find_mismatch(\"fan\",\"fun\"))\n",
@@ -413,24 +425,24 @@
       ],
       "metadata": {
         "id": "jyVxAb-MXnz2",
-        "outputId": "969fe838-615c-439f-b7be-4a84fca05930",
+        "outputId": "b985937e-444d-4467-9933-21b10de2c116",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 10,
+      "execution_count": 11,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
+            "2\n",
             "1\n",
             "1\n",
             "1\n",
             "0\n",
-            "0\n",
             "1\n",
-            "0\n"
+            "1\n"
           ]
         }
       ]
